<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>lsbot</name>
  <version>0.2.0</version>
  <description>
    LS Bot Stack
  </description>
  <maintainer email="ladrians@gmail.com">Luciano Silveira</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>lsbot_bringup</exec_depend>
  <exec_depend>lsbot_description</exec_depend>
  <exec_depend>lsbot_gazebo</exec_depend>

  <export>
    <metapackage />
  </export>

</package>