<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lsbot_gazebo</name>
  <version>0.2.1</version>
  <description>Sandbox Rover description package</description>
  <author>Luciano Silveira</author>
  <maintainer email="ladrians@gmail.com">Luciano Silveira</maintainer>
  <license>BSD, Apache 2.0</license>
  <url type="repository">https://github.com/ladrians/CppND-Capstone</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>urdf</depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>gazebo_dev</build_depend>
  <build_depend>gazebo_ros</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>gazebo_dev</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
