<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>lsbot_gazebo_plugins</name>
  <version>0.0.1</version>
  <description>
    lsbot gazebo plugins
  </description>
  <license>BSD, Apache 2.0</license>
  <author email="ladrians@gmail.com">Luciano Silveira</author>
  <maintainer email="ladrians@gmail.com">Luciano Silveira</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>

  <build_depend>roscpp</build_depend>
  <build_depend>gazebo_dev</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>lsbot_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>gazebo_dev</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>lsbot_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

</package>