<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>lsbot_msgs</name>
  <version>0.0.1</version>
  <description> Message and service data structures for lsbot msgs.</description>
  <maintainer email="ladrians@gmail.com">Luciano Silveira</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>action_msgs</build_depend>
  <build_depend>roscpp</build_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>action_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>

  <export>
  </export>
</package>